FIO-2770 Fixed text overlapping in modal window + added sr-only help message to error list

--- a/src/sass/formio.form.scss
+++ b/src/sass/formio.form.scss
@@ -700,7 +700,8 @@ body.formio-dialog-open {
   margin: 0;
 }
 
-.formio-dialog-content [ref="dialogHeader"] {
+.formio-dialog-content [ref="dialogHeader"],
+.formio-dialog-content [ref="label"] {
   padding-right: 15px;
 }
 
